--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,6 @@ libc = { version = "0.2.166", features = ["extra_traits"] }
 bitflags = "2.3.3"
 cfg-if = "1.0"
 pin-utils = { version = "0.1.0", optional = true }
-memoffset = { version = "0.9", optional = true }
 
 [features]
 default = []
@@ -63,7 +62,7 @@ reboot = []
 resource = []
 sched = ["process"]
 signal = ["process"]
-socket = ["memoffset"]
+socket = []
 syslog = []
 term = []
 time = []
