--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ targets = [
   "x86_64-unknown-openbsd",
   "x86_64-unknown-netbsd",
   "x86_64-unknown-dragonfly",
-  "x86_64-fuchsia",
+  "x86_64-unknown-fuchsia",
   "x86_64-unknown-redox",
   "x86_64-unknown-illumos"
 ]
