Fix CI by relaxing our MSRV constraint
Recently a transitive dev-dependency published a new version that is
incompatible with Nix's MSRV, causing CI to break.  That's annoying,
because there's really no reason why a crate's dev-dependencies ought to
respect the MSRV.  Fix Nix's CI by:

* Running all tests with stable Rust (or nightly, for certain targets)
* Adding an additional set of CI checks to ensure that the crate will
  compile with MSRV, on all of the major operating systems, but don't
  try to compile its tests.
* Eliminate the now-redundant "rust-stable" CI task.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -50,7 +50,7 @@ task:
   setup_script:
     - kldload mqueuefs
     - fetch https://sh.rustup.rs -o rustup.sh
-    - sh rustup.sh -y --profile=minimal --default-toolchain $MSRV
+    - sh rustup.sh -y --profile=minimal --default-toolchain stable
     - . $HOME/.cargo/env
     - rustup target add i686-unknown-freebsd
     - rustup component add clippy
