Disable the libc::personality doc test on QEMU
It's failing there with EPERM.  It's probably seccomp's fault

--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -19,6 +19,10 @@ inputs:
     required: false
     default: -D warnings -A unknown-lints
 
+  RUSTDOCFLAGS:
+    required: false
+    default: -D warnings
+
 runs:
   using: "composite"
   steps:
@@ -26,6 +30,7 @@ runs:
       shell: bash
       run: |
         echo "RUSTFLAGS=${{ inputs.RUSTFLAGS }}" >> $GITHUB_ENV
+        echo "RUSTDOCFLAGS=${{ inputs.RUSTDOCFLAGS }}" >> $GITHUB_ENV
 
     - name: test
       shell: bash
