Set RUST_BACKTRACE=1 when running tests
Set this to enable the backtrace to make debugging easier

--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -31,6 +31,8 @@ runs:
       run: |
         echo "RUSTFLAGS=${{ inputs.RUSTFLAGS }}" >> $GITHUB_ENV
         echo "RUSTDOCFLAGS=${{ inputs.RUSTDOCFLAGS }}" >> $GITHUB_ENV
+        # Enable backtrace to make debugging easier
+        echo "RUST_BACKTRACE=1" >> $GITHUB_ENV
 
     - name: test
       shell: bash
