Cross env var passthrough: RUSTDOCFLAGS and RUST_BACKTRACE
I don't know if "RUSTDOCFLAGS" will be passed automatically, but from
their doc [1]:

> In the instances that you do want to pass through additional environment
> variables, this can be done via build.env.passthrough in your Cross.toml:
>
> ```toml
> [build.env]
> passthrough = [
>    "RUST_BACKTRACE"
> ]
> ```

We do need to specify "RUST_BACKTRACE" here. Anyway, let's pass both in
case Cross won't do this for us.

[1]: https://github.com/cross-rs/cross/blob/49cd054de9b832dfc11a4895c72b0aef533b5c6a/docs/environment_variables.md#environment-variable-passthrough

--- a/Cross.toml
+++ b/Cross.toml
@@ -1,7 +1,9 @@
 [build.env]
 passthrough = [
 	"RUSTFLAGS",
-	"RUST_TEST_THREADS"
+	"RUSTDOCFLAGS",
+	"RUST_TEST_THREADS",
+	"RUST_BACKTRACE",
 ]
 
 [target.loongarch64-unknown-linux-gnu]
