--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -19,6 +19,10 @@ inputs:
     required: false
     default: -D warnings -A unknown-lints
 
+  RUSTDOCFLAGS:
+    required: false
+    default: -D warnings
+
 runs:
   using: "composite"
   steps:
@@ -26,6 +30,9 @@ runs:
       shell: bash
       run: |
         echo "RUSTFLAGS=${{ inputs.RUSTFLAGS }}" >> $GITHUB_ENV
+        echo "RUSTDOCFLAGS=${{ inputs.RUSTDOCFLAGS }}" >> $GITHUB_ENV
+        # Enable backtrace to make debugging easier
+        echo "RUST_BACKTRACE=1" >> $GITHUB_ENV
 
     - name: test
       shell: bash
